fix: Correção no z-index do header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,10 +5,9 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  z-index: 2;
   height: 6.25rem;
   width: 100%;
-
   padding: 0 5%;
   background-color: var(--header-background-color);
 }
